add instructions to run the program in intellij